Added Some pages

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -2,53 +2,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
+/* -----------------Main Section----------------- */
+
+.navMainContainer{
+  padding-left: 15%;
+  padding-right: 15%;
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
 .navStyle{
   margin-left: auto;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
-  padding: 1%;
   font-size: 1.5rem;
   color: black;
 
+
+}
+
+.navMainContainer  {
+  margin-left: auto;
+  margin-right: 20px;
 }
 
 .navitem{
-  padding-right: 15%;
+  display: inline;
+  margin-right: 40px;
 }
 
 
 .navBrand{
   font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
+  font-weight: 600;
   color: black;
-  font-size: 1.5rem;
-
+  font-size: 2rem;
 }
 
-
-
+/* -----------------LandingPage Section----------------- */
 .LandingContainer{
   text-align: center;
-  flex:cover;
-  background-color:#36454F;
-  flex: 1;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  z-index: -10;
-  transition: all 500ms ease;
 }
 
-.LandingContainer2{
+.LandingContainerFullWidth {
   text-align: center;
-  flex:cover;
-  background-color:#36454F;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  z-index: -10;
-  transition: all 500ms ease;
+  background-color: #36454F;
+  height: 60%;
+  min-height : 60vh;
+  margin-top: 5%;
+  margin-left: -30%;
+  margin-right: -30%;
+  margin-bottom: -15%;
 }
+
 
 .LandingTextContainer{
   margin: 0;
@@ -58,40 +63,129 @@
   transform: translate(-50%, -50%);
 }
 
+.LandingTitle .LandingSubTitle{
+  font-family: 'Montserrat', sans-serif;
+}
 .LandingTitle{
   color: white;
-  font-family: 'Montserrat', sans-serif;
   font-size: 4em;
   font-weight: 600;
+  font-family: 'Montserrat', sans-serif;
+}
 
+.ButtonContainer{
+  padding-top: 3%;
 }
 
 .LandingSubTitle{
-  padding: 1%;
   color: white;
-  font-family: 'Montserrat', sans-serif;
+  padding: 1%;
   font-size: 2rem;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
 }
+
+/* ----------------- About Section----------------- */
+
 .aboutProfileImageContainer{
   align-items: center;
   justify-content: center;
   display:flex;
   padding: 5%;
-  height:300;
-  width: 300;
+
 }
 
 .ProfileImage{
   border-radius: 50%;
-  height: 50%;
-  width: 50%;
+  height: 60%;
+  width: 60%;
 }
 
-.testImage{
-  height: 50%;
-  width: 50%;
-}
-p{
+.foundedBio{
+  color: black;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.5rem;
+  font-weight: 100;
   padding: 2%;
 }
 
+.bioContainer{
+  padding-top: 3%;
+}
+
+.sellingPoints{
+  padding: 3%;
+}
+
+.sellingPoints b{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.2rem;
+  font-weight: 800;
+}
+
+.sellingPoints p{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  color: black;
+  font-size: 1.2rem;
+
+}
+
+.contactDiv{
+  text-align: center;
+}
+
+.contactDiv h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 3rem;
+  font-weight: 400;
+}
+
+/* -----------------Project Section----------------- */
+.mainProjectImageContainer{
+  padding-top: 5%;
+}
+.projectTitle{
+  font-size: 2em;
+  font-weight: 600;
+  font-family: 'Montserrat', sans-serif;
+  color: black;
+}
+.projectTitleActive{
+  font-size: 2em;
+  font-weight: 600;
+  font-family: 'Montserrat', sans-serif;
+  color:rgba(92, 151, 191, 1)
+}
+
+.ProjectIMGContainer{
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.ProjectImage{
+  background-size: cover;
+  width:100%
+}
+
+.overtint {
+  position:absolute;
+  background-color: rgba(92, 151, 191, 1);
+  width:100%; height:100%;
+}
+
+
+ .ProjectImageText{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* -----------------Mobile Responsive Section----------------- */
+@media screen and (max-width: 600px) {
+  .navBrand {
+    font-size: 5vw;
+  }
+}
