--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -3,6 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 /* -----------------Main Section----------------- */
+html { font-size: calc(0.6em + 1vw)}
+footer { font-size: 0.8em; padding: 2rem; text-align: center;}
 
 .navMainContainer{
   padding-left: 15%;
@@ -15,27 +17,22 @@
   color: black;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
-  font-size: 1.5rem;
 }
 
 
 .navitem{
   display: inline;
   margin-right: 40px;
+
 }
 
 .navBrand{
   color: black;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
-  font-size: 2vw;
 }
 
 /* -----------------LandingPage Section----------------- */
-
-
-/* Typewriter effect*/
-.cursor{animation:1s blink step-end infinite}@keyframes blink{from,to{color:transparent}50%{color:#000}}@-moz-keyframes blink{from,to{color:transparent}50%{color:#000}}@-webkit-keyframes blink{from,to{color:transparent}50%{color:#000}}@-ms-keyframes blink{from,to{color:transparent}50%{color:#000}}@-o-keyframes blink{from,to{color:transparent}50%{color:#000}}
 
 
 
@@ -48,58 +45,51 @@
  padding-top: 5vh;
 }
 
-.LandingTitleContainer{
-  
-}
-
-
-
-
-.LandingTitle{
+.LandingTextContainer h1{
   color: black;
-  font-size: 10vw;
-  font-weight: 400;
-  font-family: 'Montserrat', sans-serif;
-}
-
-.LandingTitle1, .LandingTitle2, .LandingTitle3{
-  color: black;
-  font-size: 6vw;
   font-weight: 600;
   font-family: 'Montserrat', sans-serif;
-}
-
-.LandingTitle1{
   text-align: right;
+  font-size: 3.5em;
+
 }
 
-.LandingTitle2{
-  text-align: right;
-}
-.LandingTitle3{
-  text-align: right;
-}
+/* Typewriter effect*/
+.cursor{animation:1s blink step-end infinite}@keyframes blink{from,to{color:transparent}50%{color:#000}}@-moz-keyframes blink{from,to{color:transparent}50%{color:#000}}@-webkit-keyframes blink{from,to{color:transparent}50%{color:#000}}@-ms-keyframes blink{from,to{color:transparent}50%{color:#000}}@-o-keyframes blink{from,to{color:transparent}50%{color:#000}}
 
 
-.subTitleButtonContainer{
+.subTitleContainer{
+  padding-top: 1vH;
   text-align: left;
-  padding-top: 3vh;
+  pointer-events:none;
+
 }
-
-
- .LandingSubTitle{
+.subTitleContainer h6 {
   color: black;
-  font-size: 2vw;
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
+  position: relative;
 }
 
+
+.landingButton a {
+  color: black;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  border-bottom: 3px solid black;
+}
+
+.landingButton a:hover {
+  border-bottom: 0 
+
+}
 
 
 .ButtonContainer{
-  margin-top: 5%;
   text-align: right;
-padding-right: 5vw;
 
 }
 
@@ -111,35 +101,33 @@ padding-right: 5vw;
   align-items: center;
   justify-content: center;
   display:flex;
-  padding: 5%;
   padding-top: 10vh;
 }
 
-.ProfileImage{
+.aboutProfileImageContainer img {
   border-radius: 50%;
-  height: 70%;
-  width: 60%;
+  height: 35vh;
+  width: 35vh;
 }
 
-.foundedBio{
-  color: black;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 1.5rem;
-  font-weight: 100;
-  padding: 2%;
-}
 
 .bioContainer{
-  padding-top: 3%;
+  padding-top: 10vh;
+}
+
+.bioContainer p {
+  color: black;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 100;
+  justify-content: flex-end;
 }
 
 .sellingPoints{
-  padding: 3%;
+  padding-top: 5vh;
 }
 
 .sellingPoints b{
   font-family: 'Montserrat', sans-serif;
-  font-size: 1.2rem;
   font-weight: 800;
 }
 
@@ -147,48 +135,76 @@ padding-right: 5vw;
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   color: black;
-  font-size: 1.2rem;
 
 }
 
 .contactDiv{
   text-align: center;
+  padding-top: 5vh;
+
 }
 
 .contactDiv h1 {
   font-family: 'Montserrat', sans-serif;
-  font-size: 3rem;
+  font-weight: 400;
+}
+.contactDiv p, b {
+  font-family: 'Montserrat', sans-serif;
   font-weight: 400;
 }
 
+.cvButtonDiv {
+  padding-top: 3vh;
+  font-size: inherit;
+
+}
 /* -----------------Project Section----------------- */
 
-.projectIntroText{
+.mainProjectContainer{
+  padding-top: 7vh;
+}
+
+
+.projectIntroIcons{
+  transform: scale(1.4);
+  margin-right: 1vw;
+  
+}
+.projectIntroText h3{
   font-family: 'Montserrat', sans-serif;
   color: black;
-  font-weight: 400;
-  font-size: 1.3em;
-
+}
+.projectIntroText ul {
+  list-style: none;
+}
+.projectIntroText li{
+  font-family: 'Montserrat', sans-serif;
+  color: black;
+  font-weight: 600;
+  padding-top: 1rem;
 
 }
 
 .projectIntroText a{
+  font-family: 'Montserrat', sans-serif;
   color: black;
   text-decoration: underline;
+
 }
 .mainProjectImageContainer{
-  padding-top: 5%;
+  padding-top: 2vh;
 }
-.projectTitle{
-  font-size: 2em;
+
+.projectTitle  {
   font-weight: 600;
   font-family: 'Montserrat', sans-serif;
   color: black;
+  padding-left: 2rem;
 }
 .projectTitleActive{
-  font-size: 2em;
   font-weight: 600;
   font-family: 'Montserrat', sans-serif;
+  padding-left: 2rem;
   color:rgba(92, 151, 191, 1)
 }
 
@@ -198,10 +214,14 @@ padding-right: 5vw;
   color: white;
 }
 
-.ProjectImage{
+
+.ProjectIMGContainer img{
   background-size: cover;
-  width:100%
+  height: 20em;
+  width:auto;
+
 }
+
 
 .overtint {
   position:absolute;
@@ -218,76 +238,162 @@ padding-right: 5vw;
 }
 
 .ProjectTitleDiv{
-  padding-top: 5vw;
+  padding-top: 2em;
 }
 
-.ProjectTitleDiv h1 {
+.ProjectTitleDiv h6 {
   font-family: 'Montserrat', sans-serif;
   font-weight: 800;
-  font-size: 3vw;
 
 }
 
-.ProjectTitleDiv h3 {
+.ProjectTitleDiv h5{
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
-  font-size: 1.5vw;
 }
 
 .ProjectTitleDiv p{
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
-  font-size: 1.3vw;
   color: #000;
 }
 
 .techDiv {  
-margin: 0.3vw;
+margin: 0.2em;
 
 }
 
+.techDiv :hover{
+  background-color:black;
+  cursor: default;
+}
+
+.techDiv h6 {
+  padding: 0.5em;
+  background-color: rgba(92, 151, 191, 1);
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  color: white;
+  border: 1px solid black;
+
+}
 .techGroupDiv{
   display: flex;
   flex-wrap: wrap;
 
 }
-.techDiv h4 {
-  padding: 0.7vw;
-  background-color: rgba(92, 151, 191, 1);
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  font-size: 1.5vw;
-  color: white;
-  border: 1px solid black;
 
+
+
+.carousel .thumb img {
+  width: 100% !important;
+  height: 100% !important;
+}
+.carousel .slide{ 
+  background-color: white !important; 
 }
 
+.carsolNext{
+  transform: scale(4);
+  margin-left: 1vw;
+  margin-right: 1vw;
+  color:rgba(92, 151, 191, 1) ;
+}
 
+.legend {
+  font-family: 'Montserrat', sans-serif !important;
+  font-weight: 400 !important;
+  background-color:rgba(92, 151, 191, 1) !important;
+  bottom: 0 !important;
+  width:10em !important;
+  right: 0 !important;
+  font-size: inherit !important;
+}
+/* ----------------Footer Section----------------- */
+
+.copyRight{
+  color: rgba(0,0,0,.7); text-shadow: 0 1px rgba(255, 255, 255, 0.1);
+}
+
+.showLinkedin{
+  padding-bottom: 2vh;
+}
+.footerDiv h6 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  color: black;
+  padding-bottom: 1vh ;
+}
+
+.footerIcon {
+  transform: scale(1.8);
+  margin-left: 1vw;
+  margin-right: 1vw;
+  color: #000;
+}
 /* -----------------Mobile Responsive Section----------------- */
 @media screen and (max-width: 600px) {
-  .navBrand {
-    font-size: 5vw;
+
+  .navMainContainer{
+    padding-left: 3%;
+    padding-right: 3%;
   }
 
-  .LandingTitle1, .LandingTitle2, .LandingTitle3{ 
-    font-size: 5vh;
 
-  }
-.LandingTextContainer{
-  margin-top: 10vh;
+.mainProjectImageContainer{
+  padding-top: 4em;
 }
-  .LandingSubTitle{
-    font-size: 2vh;
 
-  }
+.projectTitle, .projectTitleActive {
+  padding-top: 0.8em;
 
-  .foundedBio{
+}
 
-    font-size: 4vw;
+}
+/* -----------------Modal Section----------------- */
 
-  }
-  .sellingPoints p, .sellingPoints b {
-    font-size: 4vw;
+.overlay {
+  position: fixed;
+  display: flex;
+  top:0;
+  bottom:0;
+  left:0;
+  right:0;
+  align-items: center;
+  justify-content: center;
+  z-index: 20;
 
-  }
+  background-color: white
+}
+
+
+
+.modalLink {
+  color:	grey;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  padding: 1rem;
+}
+
+.modalLinkActive {
+  color: black;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  padding: 1rem;
+}
+
+
+
+.modal-close {
+  position: absolute;
+  top: 1em;
+  right: 1em;
+  border: 0;
+  -webkit-appearance: none;
+  background: none;
+  cursor: pointer;
+}
+
+.closeIcon{
+  transform: scale(2);
 }
